Refactor home, contact, and services pages; add new components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,14 +17,13 @@ import LogoW from '../assets/images/LogoW.svg';
           <li><a href="/" class="text-gray-400 hover:text-white transition-colors">Inicio</a></li>
           <li><a href="/que-hacemos" class="text-gray-400 hover:text-white transition-colors">Qué Hacemos</a></li>
           <li><a href="/quienes-somos" class="text-gray-400 hover:text-white transition-colors">Quiénes Somos</a></li>
-          <li><a href="/eventos" class="text-gray-400 hover:text-white transition-colors">Eventos</a></li>
         </ul>
       </div>
 
       <div>
         <h3 class="text-xl font-bold mb-4">Servicios</h3>
         <ul class="space-y-2">
-          <li><a href="/agenda" class="text-gray-400 hover:text-white transition-colors">Agenda una Cita</a></li>
+          <li><a href="/eventos" class="text-gray-400 hover:text-white transition-colors">Eventos</a></li>
           <li><a href="/blog" class="text-gray-400 hover:text-white transition-colors">Blog</a></li>
           <li><a href="/contacto" class="text-gray-400 hover:text-white transition-colors">Contáctanos</a></li>
         </ul>
@@ -33,18 +32,18 @@ import LogoW from '../assets/images/LogoW.svg';
       <div class="lg:text-right">
         <h3 class="text-xl font-bold mb-4">Síguenos</h3>
         <div class="flex space-x-4 justify-center md:justify-start lg:justify-end">
-          <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
+          <a target="_blank" href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
             <FaFacebook size={24} />
           </a>
-          <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Twitter">
+          <!-- <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Twitter">
             <FaTwitter size={24} />
-          </a>
+          </a> -->
           <a target="_blank" href="https://www.instagram.com/e2estrategiaspatrimoniales/" class="text-gray-400 hover:text-white transition-colors" aria-label="Instagram">
             <FaInstagram size={24} />
           </a>
-          <!-- <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="LinkedIn">
+          <a target="_blank" href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="LinkedIn">
             <FaLinkedin size={24} />
-          </a> -->
+          </a>
         </div>
       </div>
     </div>
