--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -3,6 +3,7 @@ import Header from '../components/Header';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 import { ClientRouter } from 'astro:transitions';
+import ScrollToTop from '../components/shared/ScrollTop';
 
 interface Props {
   title?: string;
@@ -28,6 +29,8 @@ const { title = 'E2STRATEGIAS PATRIMONIALES', description = 'Déjanos hacerte la
 		{showHeader && <Header client:load />}
 		<main class="grow">
 			<slot />
+			    <ScrollToTop client:load />
+
 		</main>
 		<Footer />
 	</body>
