--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,7 +8,7 @@ import PostCard from '../components/PostCard.astro';
 const blogs = await getCollection("blog")
 ---
 
-<Layout title="Blog - E2STRATEGIAS PATRIMONIALES" description="Artículos y consejos sobre estrategias patrimoniales">
+<Layout title="Blog - E2TRATEGIAS PATRIMONIALES" description="Artículos y consejos sobre estrategias patrimoniales">
 	<Hero
 		client:load
 		title="Nuestro Blog"
