--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -8,7 +8,7 @@ import ComoFunciona from '../components/contacto/ComoFunciona.astro';
 import UbicacionYHorario from '../components/contacto/UbicacionYHorario.astro';
 ---
 
-<Layout title="Contáctanos - E2STRATEGIAS PATRIMONIALES" description="Ponte en contacto con nuestro equipo">
+<Layout title="Contáctanos - E2TRATEGIAS PATRIMONIALES" description="Ponte en contacto con nuestro equipo">
 	<Hero
 		client:load
 		title="Contáctanos"
