--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,11 @@ import Elegirnos from '../components/Home/Elegirnos.astro';
 import Testimonios from '../components/Home/Testimonios';
 ---
 
-<Layout title="Inicio - E2STRATEGIAS PATRIMONIALES" description="Bienvenido a E2STRATEGIAS PATRIMONIALES">
+<Layout title="Inicio - E2TRATEGIAS PATRIMONIALES" description="Bienvenido a E2TRATEGIAS PATRIMONIALES">
 	<Hero
 		client:load
-		title="E2STRATEGIAS PATRIMONIALES"
+		showButton={true}
+		title="E2TRATEGIAS PATRIMONIALES"
 		subtitle="Diseñamos estrategias para disfrutar en vida"
 		ctaText="Conoce Más"
 		ctaLink="que-hacemos"
