--- a/src/pages/que-hacemos.astro
+++ b/src/pages/que-hacemos.astro
@@ -7,7 +7,7 @@ import Form from '../components/Form';
 import Hacemos from '../components/que-hacemos/Hacemos.astro';
 ---
 
-<Layout title="Qué Hacemos - E2STRATEGIAS PATRIMONIALES" description="Conoce nuestros servicios y soluciones">
+<Layout title="Qué Hacemos - E2TRATEGIAS PATRIMONIALES" description="Conoce nuestros servicios y soluciones">
 	<Hero
 		client:load
 		title="Qué Hacemos"
