--- a/src/pages/quienes-somos.astro
+++ b/src/pages/quienes-somos.astro
@@ -8,7 +8,7 @@ import { getCollection } from 'astro:content';
 const teamMembers = await getCollection('team');
 ---
 
-<Layout title="Quiénes Somos - E2STRATEGIAS PATRIMONIALES" description="Conoce a nuestro equipo y nuestra historia">
+<Layout title="Quiénes Somos - E2TRATEGIAS PATRIMONIALES" description="Conoce a nuestro equipo y nuestra historia">
 	<Hero
 		client:load
 		title="Quiénes Somos"
