--- a/src/pages/team/[slug].astro
+++ b/src/pages/team/[slug].astro
@@ -19,7 +19,7 @@ const allTeamMembers = await getCollection('team');
 const otherMembers = allTeamMembers.filter(member => member.slug !== entry.slug);
 ---
 
-<ContentLayout title={`${entry.data.name} - E2STRATEGIAS PATRIMONIALES`} description={entry.data.description}>
+<ContentLayout title={`${entry.data.name} - E2TRATEGIAS PATRIMONIALES`} description={entry.data.description}>
   <div class="relative bg-gray-50 dark:bg-gray-900 min-h-screen transition-colors duration-300">
       
       <div class="absolute top-0 left-0 right-0 p-4 md:p-8 flex justify-between items-center z-20">
