UPDATE: MAde ui adjustments and extra fnctionallity

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ import LogoW from '../assets/images/LogoW.svg';
       <div class="lg:text-right">
         <h3 class="text-xl font-bold mb-4">Síguenos</h3>
         <div class="flex space-x-4 justify-center md:justify-start lg:justify-end">
-          <a target="_blank" href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
+          <a target="_blank" href="https://www.facebook.com/profile.php?id=100064020670436" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
             <FaFacebook size={24} />
           </a>
           <!-- <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Twitter">
