--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -28,8 +28,8 @@ import UbicacionYHorario from '../components/contacto/UbicacionYHorario.astro';
 					<HiMail client:load size={32} className="text-primary dark:text-primary-500" />
 				</div>
 				<h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white">Email</h3>
-				<a href="mailto:info@ejemplo.com" class="text-primary dark:text-primary-500 hover:underline">
-					info@ejemplo.com
+				<a href="mailto:e2.veroelizondo@gmail.com" class="text-primary dark:text-primary-500 hover:underline">
+					e2.veroelizondo@gmail.com
 				</a>
 			</div>
 
@@ -38,8 +38,8 @@ import UbicacionYHorario from '../components/contacto/UbicacionYHorario.astro';
 					<HiPhone client:load size={32} className="text-primary dark:text-primary-500" />
 				</div>
 				<h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white">Teléfono</h3>
-				<a href="tel:+34123456789" class="text-primary dark:text-primary-500 hover:underline">
-					+52 123 456 789
+				<a href="tel:+528120394143" class="text-primary dark:text-primary-500 hover:underline">
+					+52 81 2039 4143
 				</a>
 			</div>
 
