--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -25,7 +25,7 @@ const { title = 'E2TRATEGIAS PATRIMONIALES', description = 'Déjanos hacerte la 
 		<meta name="description" content={description} />
 		<title>{title}</title>
 	</head>
-	<body class="min-h-screen flex flex-col bg-white dark:bg-gray-900 text-gray-900 dark:text-white transition-colors">
+	<body class="min-h-screen flex flex-col bg-white dark:bg-primary-700 text-primary-700 dark:text-white transition-colors">
 		{showHeader && <Header client:load />}
 		<main class="grow">
 			<slot />
