--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -24,30 +24,30 @@ import UbicacionYHorario from '../components/contacto/UbicacionYHorario.astro';
 	>
 		<div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-0">
 			<div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-blue-900 rounded-full mb-4">
+				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
 					<HiMail client:load size={32} className="text-primary dark:text-primary-500" />
 				</div>
-				<h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white">Email</h3>
+				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">Email</h3>
 				<a href="mailto:e2.veroelizondo@gmail.com" class="text-primary dark:text-primary-500 hover:underline">
 					e2.veroelizondo@gmail.com
 				</a>
 			</div>
 
 			<div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-blue-900 rounded-full mb-4">
+				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
 					<HiPhone client:load size={32} className="text-primary dark:text-primary-500" />
 				</div>
-				<h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white">Teléfono</h3>
+				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">Teléfono</h3>
 				<a href="tel:+528120394143" class="text-primary dark:text-primary-500 hover:underline">
 					+52 81 2039 4143
 				</a>
 			</div>
 
 			<div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-blue-900 rounded-full mb-4">
+				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
 					<HiLocationMarker client:load size={32} className="text-primary dark:text-primary-500" />
 				</div>
-				<h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white">Ubicación</h3>
+				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">Ubicación</h3>
 				<p class="text-gray-600 dark:text-gray-300">
 					Calle Principal 123<br />Monterrey, Nuevo León
 				</p>
