--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -37,7 +37,7 @@ const { title, description, image, link, delay = 0 } = Astro.props;
   </div>
   <div class="p-6">
     <h3 
-      class="text-2xl font-bold mb-3 text-gray-900 dark:text-white"
+      class="text-2xl font-bold mb-3 text-primary-700 dark:text-white"
       transition:name={title}
     >
       {title}
