--- a/src/components/que-hacemos/Hacemos.astro
+++ b/src/components/que-hacemos/Hacemos.astro
@@ -1,15 +1,14 @@
 ---
-
-import {queHacemosData, type ItemData } from '../../data/queHacemos.ts';
+import { queHacemosData, type ItemData } from "../../data/queHacemos.ts";
 ---
 
-
-{queHacemosData.map((data: ItemData)=>(
-	<div class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg">
-		<h3 class="text-2xl font-bold mb-3 text-primary dark:text-primary-500">{data.title}</h3>
-		<p class="text-gray-600 dark:text-gray-300">
-		{data.subtitle}
-		</p>
-	</div>
-))}
-    	
+{
+  queHacemosData.map((data: ItemData) => (
+    <div class="bg-white dark:bg-gray-800 group hover:scale-105 transition-all ease-in duration-300 p-6 rounded-xl shadow-lg">
+      <h3 class="text-2xl font-bold mb-3 group-hover:text-secondary transition-all ease-in text-primary-700 dark:text-primary-500">
+        {data.title}
+      </h3>
+      <p class="text-gray-600 dark:text-gray-300">{data.subtitle}</p>
+    </div>
+  ))
+}
