--- a/src/components/quienes-somos/Principios.astro
+++ b/src/components/quienes-somos/Principios.astro
@@ -14,7 +14,7 @@ import { HiLightBulb, HiClock, HiUserGroup } from "react-icons/hi";
     </div>
 
     <div class="flex flex-col justify-center">
-      <h3 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">
+      <h3 class="text-2xl font-bold mb-4 text-primary-700 dark:text-white">
         El Principio
       </h3>
       <p class="text-gray-600 dark:text-gray-300 leading-relaxed text-lg">
@@ -31,7 +31,7 @@ import { HiLightBulb, HiClock, HiUserGroup } from "react-icons/hi";
     >
       <HiClock client:visible size={32} />
     </div>
-    <h3 class="text-xl font-bold mb-4 text-gray-900 dark:text-white">
+    <h3 class="text-xl font-bold mb-4 text-primary-700 dark:text-white">
       El Presente
     </h3>
     <p class="text-gray-600 dark:text-gray-300 leading-relaxed">
@@ -43,11 +43,11 @@ import { HiLightBulb, HiClock, HiUserGroup } from "react-icons/hi";
     class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8 hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center h-full"
   >
     <div
-      class="w-16 h-16 bg-blue-100 dark:bg-blue-900/30 rounded-full flex items-center justify-center mb-6 text-blue-500 dark:text-blue-400"
+      class="w-16 h-16 bg-blue-100 dark:bg-primary-700/30 rounded-full flex items-center justify-center mb-6 text-blue-500 dark:text-blue-400"
     >
       <HiUserGroup client:visible size={32} />
     </div>
-    <h3 class="text-xl font-bold mb-4 text-gray-900 dark:text-white">
+    <h3 class="text-xl font-bold mb-4 text-primary-700 dark:text-white">
       Tu Futuro
     </h3>
     <p class="text-gray-600 dark:text-gray-300 leading-relaxed">
