--- a/src/components/que-hacemos/Hacemos.astro
+++ b/src/components/que-hacemos/Hacemos.astro
@@ -1,14 +1,8 @@
 ---
-import { queHacemosData, type ItemData } from "../../data/queHacemos.ts";
+import { queHacemosData } from "../../data/queHacemos.ts";
+import HacemosItem from "./HacemosItem";
 ---
 
-{
-  queHacemosData.map((data: ItemData) => (
-    <div class="bg-white dark:bg-gray-800 group hover:scale-105 transition-all ease-in duration-300 p-6 rounded-xl shadow-lg">
-      <h3 class="text-2xl font-bold mb-3 group-hover:text-secondary transition-all ease-in text-primary-700 dark:text-primary-500">
-        {data.title}
-      </h3>
-      <p class="text-gray-600 dark:text-gray-300">{data.subtitle}</p>
-    </div>
-  ))
-}
+<div class="grid grid-cols-1 md:grid-cols-4 gap-6">
+  {queHacemosData.map((data) => <HacemosItem client:visible data={data} />)}
+</div>
