--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,61 +1,101 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Hero';
-import Section from '../components/Section';
-import { HiMail, HiPhone, HiLocationMarker } from 'react-icons/hi';
-import Form from '../components/Form';
-import ComoFunciona from '../components/contacto/ComoFunciona.astro';
-import UbicacionYHorario from '../components/contacto/UbicacionYHorario.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/Hero";
+import Section from "../components/Section";
+import { HiMail, HiPhone, HiLocationMarker } from "react-icons/hi";
+import Form from "../components/Form";
+import ComoFunciona from "../components/contacto/ComoFunciona.astro";
+import UbicacionYHorario from "../components/contacto/UbicacionYHorario.astro";
+import video from "../assets/videos/Home.mp4";
 ---
 
-<Layout title="Contáctanos - E2TRATEGIAS PATRIMONIALES" description="Ponte en contacto con nuestro equipo">
-	<Hero
-		client:load
-		title="Contáctanos"
-		subtitle="¿Tienes preguntas? Estamos a tu entera disposición"
-		imageSrc="https://images.pexels.com/photos/3184435/pexels-photo-3184435.jpeg?auto=compress&cs=tinysrgb&w=1920"
-	/>
+<Layout
+  title="Contáctanos - E2TRATEGIAS PATRIMONIALES"
+  description="Ponte en contacto con nuestro equipo"
+>
+  <Hero
+    client:load
+    title="Contáctanos"
+    subtitle="¿Tienes preguntas? Estamos a tu entera disposición"
+    videoSrc={video}
+  />
 
-	<Section
-		client:load
-		title="Información de Contacto"
-		subtitle="Múltiples formas de comunicarte con nosotros"
-		background="light"
-	>
-		<div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-0">
-			<div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
-					<HiMail client:load size={32} className="text-primary dark:text-primary-500" />
-				</div>
-				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">Email</h3>
-				<a href="mailto:e2.veroelizondo@gmail.com" class="text-primary dark:text-primary-500 hover:underline">
-					e2.veroelizondo@gmail.com
-				</a>
-			</div>
+  <Section
+    client:load
+    title="Información de Contacto"
+    subtitle="Múltiples formas de comunicarte con nosotros"
+    background="light"
+  >
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-0">
+      <div
+        class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg"
+      >
+        <div
+          class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4"
+        >
+          <HiMail
+            client:load
+            size={32}
+            className="text-primary dark:text-primary-500"
+          />
+        </div>
+        <h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">
+          Email
+        </h3>
+        <a
+          href="mailto:e2.veroelizondo@gmail.com"
+          class="text-primary dark:text-primary-500 hover:underline"
+        >
+          e2.veroelizondo@gmail.com
+        </a>
+      </div>
 
-			<div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
-					<HiPhone client:load size={32} className="text-primary dark:text-primary-500" />
-				</div>
-				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">Teléfono</h3>
-				<a href="tel:+528120394143" class="text-primary dark:text-primary-500 hover:underline">
-					+52 81 2039 4143
-				</a>
-			</div>
+      <div
+        class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg"
+      >
+        <div
+          class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4"
+        >
+          <HiPhone
+            client:load
+            size={32}
+            className="text-primary dark:text-primary-500"
+          />
+        </div>
+        <h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">
+          Teléfono
+        </h3>
+        <a
+          href="tel:+528120394143"
+          class="text-primary dark:text-primary-500 hover:underline"
+        >
+          +52 81 2039 4143
+        </a>
+      </div>
 
-			<div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
-					<HiLocationMarker client:load size={32} className="text-primary dark:text-primary-500" />
-				</div>
-				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">Ubicación</h3>
-				<p class="text-gray-600 dark:text-gray-300">
-					Calle Principal 123<br />Monterrey, Nuevo León
-				</p>
-			</div>
-		</div>
-	</Section>
-	<UbicacionYHorario />
+      <div
+        class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg"
+      >
+        <div
+          class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4"
+        >
+          <HiLocationMarker
+            client:load
+            size={32}
+            className="text-primary dark:text-primary-500"
+          />
+        </div>
+        <h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">
+          Ubicación
+        </h3>
+        <p class="text-gray-600 dark:text-gray-300">
+          Calle Principal 123<br />Monterrey, Nuevo León
+        </p>
+      </div>
+    </div>
+  </Section>
+  <UbicacionYHorario />
 
-	<ComoFunciona />
-	<Form client:load />
+  <ComoFunciona />
+  <Form client:load />
 </Layout>
